# SQLNotify

./: .dockerignore  .env.example  .gitattributes  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
docs/: SQLITE_QUICKSTART.md
scripts/: release.sh
src/sqlnotify/: __init__.py  constants.py  exceptions.py  logger.py  types.py  utils.py  watcher.py
src/sqlnotify/adapters/: asgi.py
src/sqlnotify/dialects/: __init__.py  base.py  postgresql.py  sqlite.py  utils.py
src/sqlnotify/notifiers/: base.py  notifier.py
tests/: conftest.py  database.py  test_postgres_dialect.py  test_postgres_notifier.py  test_postgres_notifier_asgi_adapter.py  test_sqlite_dialect.py  test_sqlite_notifier.py  test_sqlite_notifier_asgi_adapter.py  test_watcher.py
tests/models/: __init__.py  invalid.py  post.py  session_log.py  user.py  user_posts.py
